--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <!--logo-->
       <img src="./images/tesla.svg" alt="tesla logo" class="h-6">
       <!--Nav Links-->
-      <div>
+      <div class="hidden lg:block">
          <a href="#modelS" class="text-2xl font-semibold text-[#181b21] mx-[0.8rem] px-[0.8rem] py-[0.4rem] rounded-[0.8rem] bg-transparent hover:bg-[#181b21] hover:bg-opacity-10 transition-all duration-300">Model S</a>
          <a href="#model3" class="nav_link">Model 3</a>
          <a href="#modelX" class="nav_link">Model X</a>
@@ -23,8 +23,8 @@
       </div>
       <!--Extra Links-->
       <div>
-         <a href="#shop" class="nav_link">Shop</a>
-         <a href="#account" class="nav_link">Account</a>
+         <a href="#shop" class="nav_link hidden lg:block">Shop</a>
+         <a href="#account" class="nav_link hidden lg:block">Account</a>
          <a href="#menu" class="nav_link">Menu</a>
       </div>
    </header>
